<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ActivityBackground"
    tools:context="view.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="29dp"
                android:background="#FFEB3B"
                android:fontFamily="monospace"
                android:foreground="@drawable/img_468929"
                android:paddingLeft="68dp"
                android:paddingTop="6dp"
                android:paddingRight="68dp"
                android:paddingBottom="6dp"
                android:text="@string/mainmenu_subtitle"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="@+id/llTitle"
                app:layout_constraintStart_toStartOf="@+id/llTitle"
                app:layout_constraintTop_toBottomOf="@+id/llTitle" />

            <LinearLayout
                android:id="@+id/llTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                style="@style/NotClickable"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="monospace"
                    android:paddingStart="96dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="4dp"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#000000"
                    android:textSize="36sp"
                    tools:layout_editor_absoluteX="49dp"
                    tools:layout_editor_absoluteY="184dp" />

                <ImageView
                    android:id="@+id/ivTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:paddingLeft="16dp"
                    android:paddingTop="2dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="6dp"
                    android:src="@drawable/icons8_cocktail_64"
                    android:contentDescription="@string/launcher_icon" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="274dp"
                android:layout_height="271dp"
                android:layout_marginTop="24dp"
                android:background="@color/colorPrimary"
                android:foreground="@drawable/img_468929"
                android:paddingTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/tvSubtitle"
                app:layout_constraintHorizontal_bias="0.513"
                app:layout_constraintStart_toStartOf="@+id/tvSubtitle"
                app:layout_constraintTop_toBottomOf="@+id/tvSubtitle"
                app:srcCompat="@drawable/bar_service_silhouette_silhouette_bartender_png_transparent_png_removebg_preview"
                android:contentDescription="@string/barman" />

            <Button
                android:id="@+id/bBrowse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="93dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="93dp"
                android:theme="@style/Button"
                android:text="@string/mainmenu_bbrowse_text"
                app:layout_constraintEnd_toEndOf="@+id/imageView2"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <Button
                android:id="@+id/bStarred"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="93dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="93dp"
                android:theme="@style/Button"
                android:text="@string/mainmenu_bstarred_text"
                app:layout_constraintEnd_toEndOf="@+id/bBrowse"
                app:layout_constraintStart_toStartOf="@+id/bBrowse"
                app:layout_constraintTop_toBottomOf="@+id/bBrowse" />

            <Button
                android:id="@+id/bRandom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="93dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="93dp"
                android:theme="@style/Button"
                android:text="@string/mainmenu_brandom_text"
                app:layout_constraintEnd_toEndOf="@+id/bStarred"
                app:layout_constraintStart_toStartOf="@+id/bStarred"
                app:layout_constraintTop_toBottomOf="@+id/bStarred" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>